# Module13

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.sqlite
alembic/: env.py
alembic/versions/: 3b4c3ee85908_initial_migration.py  8dfc21d37290_db_creation.py
app/: schemas.py
app/database/: db.py  model.py
app/repository/: users.py
app/routes/: auth.py  contacts.py  users.py
app/services/: auth.py  email.py
docs/source/: conf.py
tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_unit_respository_users.py
