[tool.poetry]
name = "module11"
version = "0.1.0"
description = ""
authors = ["Dmytro <777fesenko.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
asyncpg = "^0.28.0"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
